
[package]

name = "Hash_Pool"
authors = ["AreaLayer"]
license = "MIT"
description = "A simple library for Mining pools and developers"
documentation = "https://docs.rs/hashpool"
homepage = "https://www.arealayer.net/projects"
version = "1.0.20-beta"
edition = "2021"

[dependencies]

crypto = { version = "0.5.1", features = ["digest"] }
bdk = "= 0.30.1"
bdk_electrum = "0.20.1"
bitcoin = "=0.32.5"
lightning = "=0.0.125"
sha2 = "=0.10.8"
ppv-lite86 = "0.2.20"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio-util = "0.7.13"
futures = "0.3.31"

[lib]

name = "mining"
path = "src/lib.rs"

# Explicitly include everything needed in the published package
[[bin]]

name = "hashpoold"
path = "bin/hashpoold.rs"
