
[package]

name = "Hash_Pool"
authors = ["AreaLayer"]
license = "MIT"
description = "A simple library for Mining pools and developers"
documentation = "https://docs.rs/hashpool"
homepage = "https://www.arealayer.net/projects"
version = "1.0.22-beta"
edition = "2021"

[dependencies]

crypto = { version = "0.5.1", features = ["digest"] }
bdk = "= 0.30.2"
bdk_electrum = "0.21.0"
bitcoin = "=0.32.5"
lightning = "=0.1.2"
sha2 = "=0.10.8"
ppv-lite86 = "0.2.20"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = "0.7.13"
futures = "0.3.31"

[lib]

name = "mining"
path = "src/lib.rs"

# Explicitly include everything needed in the published package
[[bin]]

name = "hashpoold"
path = "bin/hashpoold.rs"
