[package]

name = "Hash_Pool"
authors = ["AreaLayer"]
license = "MIT"
description = "A simple library for Mining pools and developers"
documentation = "https://docs.rs/hashpool"
homepage = "https://www.arealayer.net/projects"
repository = "https://github.com/AreaLayer/HashPool"
version = "1.0.24-beta"
edition = "2024"

[dependencies]

crypto = { version = "0.5.1", features = ["digest"] }
bdk = "= 0.30.2"
bdk_electrum = "0.23.0"
bitcoin = "=0.32.6"
lightning = "=0.1.4"
sha2 = "=0.10.9"
ppv-lite86 = "0.2.20"
tokio = { version = "1.46.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = "0.7.13"
futures = "0.3.31"

[lib]

name = "mining"
path = "src/lib.rs"

# Explicitly include everything needed in the published package
[[bin]]

name = "hashpoold"
path = "bin/hashpoold.rs"
