[package]
name = "on-chain"
version = "1.0.0"
license = "MIT"
authors = ["22388o"]
description = "A simple library for on-chain operations"
documentation = "https://docs.rs/hashpool"
edition = "2018"

[dependencies]

bdk = "=1.0.0-alpha.11"
bitcoin = "0.32.0"

[lib]
name = "on-chain"
path = "src/on-chain/lib.rs"

name = "data"
path = "src/data/lib.rs